--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "emailjs-com": "^3.2.0",
+    "immer": "^9.0.6",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
